--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Recreate a Webpack project just by providing an URL.",
   "main": "src/index.js",
   "scripts": {
-    "test": "yarn run test-eslint",
-    "test-eslint": "eslint src/ --ext .jsx,.js"
+    "lint": "eslint src/ --ext .jsx,.js",
+    "test": "yarn lint"
   },
   "author": {
     "name": "Wojciech Maj",
