--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^3.0.0",
-    "lodash": "^4.17.13",
-    "mkdirp": "^1.0.0"
+    "lodash": "^4.17.13"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
