--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lodash": "^4.17.13"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.0"
+    "eslint": "~7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2"
   }
 }
