--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 2020
-  },
-  "extends": "airbnb-base",
-  "rules": {
-    "no-console": "off"
-  },
-  "overrides": [
-    {
-      "files": [
-        "**/*.spec.js",
-        "**/__tests__/*"
-      ],
-      "env": {
-        "jest": true
-      }
-    }
-  ]
+  "extends": "wojtekmaj/node"
 }
