--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "eslint": "~7.2.0",
     "eslint-config-wojtekmaj": "^0.5.0"
+  },
+  "resolutions": {
+    "rimraf@2.6.3": "^2.6.3"
   }
 }
