--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^3.0.0",
+    "follow-redirects": "^1.14.1",
     "lodash": "^4.17.19"
   },
   "devDependencies": {
