--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "devDependencies": {
     "eslint": "~7.19.0",
     "eslint-config-wojtekmaj": "^0.5.0"
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
