--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src/ --ext .jsx,.js",
+    "postinstall": "husky install",
     "test": "yarn lint"
   },
   "author": {
@@ -18,8 +19,11 @@
     "lodash": "^4.17.19"
   },
   "devDependencies": {
-    "eslint": "~7.19.0",
-    "eslint-config-wojtekmaj": "^0.5.0"
+    "eslint": "^8.5.0",
+    "eslint-config-wojtekmaj": "^0.6.4",
+    "husky": "^7.0.0",
+    "prettier": "^2.5.0",
+    "pretty-quick": "^3.1.0"
   },
   "packageManager": "yarn@3.1.0"
 }
