--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint src/ --ext .jsx,.js",
     "postinstall": "husky install",
-    "test": "yarn lint"
+    "prettier": "prettier --check .",
+    "test": "yarn lint && yarn prettier"
   },
   "author": {
     "name": "Wojciech Maj",
