--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src/ --ext .jsx,.js",
     "postinstall": "husky install",
-    "prettier": "prettier --check .",
+    "prettier": "prettier --check . --cache",
     "test": "yarn lint && yarn prettier"
   },
   "author": {
@@ -23,7 +23,7 @@
     "eslint": "^8.5.0",
     "eslint-config-wojtekmaj": "^0.6.4",
     "husky": "^8.0.0",
-    "prettier": "^2.5.0",
+    "prettier": "^2.7.0",
     "pretty-quick": "^3.1.0"
   },
   "packageManager": "yarn@3.1.0"
