--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Recreate a Webpack project just by providing an URL.",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint src/ --ext .jsx,.js",
+    "lint": "eslint src",
     "postinstall": "husky install",
     "prettier": "prettier --check . --cache",
     "test": "yarn lint && yarn prettier"
